--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "fs-extra": "^7.0.1",
     "moment": "^2.23.0",
     "morgan": "~1.9.0",
     "mysql": "^2.16.0",
@@ -23,6 +24,7 @@
     "@types/body-parser": "^1.17.0",
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.0",
+    "@types/fs-extra": "^5.0.5",
     "@types/morgan": "^1.7.35",
     "@types/serve-favicon": "^2.2.30",
     "typescript": "^3.2.2"
