--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,8 @@
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
       "sourceMap": true
-    }
+    },
+    "files": [
+      "app.ts"
+    ]
 }
