--- a/package.json
+++ b/package.json
@@ -6,19 +6,23 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@types/mime": "^2.0.1",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "fs-extra": "^7.0.1",
+    "mime": "^2.4.0",
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
+    "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "pug": "2.0.0-beta11",
     "reflect-metadata": "^0.1.12",
     "serve-favicon": "~2.4.5",
     "sqlite3": "^4.0.6",
-    "typeorm": "^0.2.11"
+    "typeorm": "^0.2.11",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
@@ -26,7 +30,9 @@
     "@types/express": "^4.16.0",
     "@types/fs-extra": "^5.0.5",
     "@types/morgan": "^1.7.35",
+    "@types/multer": "^1.3.7",
     "@types/serve-favicon": "^2.2.30",
+    "@types/uuid": "^3.4.4",
     "typescript": "^3.2.2"
   }
 }
