--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "fs-extra": "^7.0.1",
+    "jsonwebtoken": "^8.5.0",
     "mime": "^2.4.0",
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
@@ -29,6 +30,7 @@
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.0",
     "@types/fs-extra": "^5.0.5",
+    "@types/jsonwebtoken": "^8.3.0",
     "@types/morgan": "^1.7.35",
     "@types/multer": "^1.3.7",
     "@types/serve-favicon": "^2.2.30",
