--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "huayang-maintenance-server",
-  "version": "0.1.2",
+  "name": "blog-zone-server",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./app.js"
   },
   "dependencies": {
     "@types/mime": "^2.0.1",
