--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,5 +2,5 @@
     "type": "sqlite",
     "database": "./database.db",
     "entities": ["entity/*.js"],
-    "synchronize": true
+    "synchronize": false
 }
