--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@types/mime": "^2.0.1",
+    "axios": "^0.19.0",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -18,6 +19,7 @@
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
+    "pg": "^7.12.1",
     "pug": "2.0.0-beta11",
     "reflect-metadata": "^0.1.12",
     "serve-favicon": "~2.4.5",
