--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,7 +1,7 @@
 {
     "type": "postgres",
-    "host": "huyg.site",
-    "username": "hpdell",
+    "host": "192.168.190.205",
+    "username": "HuYigong",
     "password": "HuYGChenzxc0559",
     "database": "blog-zone",
     "entities": ["entity/*.js"],
@@ -9,5 +9,5 @@
     "cli": { 
         "migrationsDir": "migration" 
     },
-    "synchronize": false
+    "synchronize": true
 }
