--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,7 +1,7 @@
 {
     "type": "postgres",
-    "host": "127.0.0.1",
-    "username": "hpdell",
+    "host": "192.168.190.205",
+    "username": "HuYigong",
     "password": "HuYGChenzxc0559",
     "database": "blog-zone",
     "entities": ["entity/*.js"],
